understanding how input class work

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "Lua.diagnostics.globals": [
         "love",
-        "recursiveEnumerate"
+        "recursiveEnumerate",
+        "Rectangle"
     ]
 }
